--- a/hitoriboshi-showcase.html
+++ b/hitoriboshi-showcase.html
@@ -581,7 +581,7 @@
         <!-- CTA -->
         <section class="cta-section">
             <a href="hitoriboshi.html" class="cta-button"
-            target="_blank" rel="noopener noreferrer">体験する</a>
+            >体験する</a>
         </section>
     </div>
 
